--- a/src/page/FormPage.module.scss
+++ b/src/page/FormPage.module.scss
@@ -2,8 +2,8 @@
 
 .container {
   font-family:'Open Sans', sans-serif;
-  width:600px;
-  margin:100px 0 0 1-0px;
-  display:block;
-  padding:10px 50px 50px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
