--- a/src/components/form/fields/view/dateInput/DatetimeInput.module.scss
+++ b/src/components/form/fields/view/dateInput/DatetimeInput.module.scss
@@ -1,29 +1,29 @@
-.group {
-  position:relative;
+.fieldInput {
+  font-size: 18px;
+  background-color: #F0F0F0;
+  width: 100%;
+  padding: 20px 20px 20px 15px;
+  display: block;
+  border: none;
+  border-radius: 5px;
 
-  input {
-    font-size:18px;
-    background-color: #F0F0F0;
-    width: 100%;
-    padding: 20px 20px 20px 15px;
-    display:block;
-    border:none;
-    border-radius: 5px;
+  &:focus {
+    outline: none;
   }
+}
 
-  input:focus 		{ outline:none; }
-
+.fieldStyles {
   label {
     color: #B1B1B1;
-    font-size:10px;
-    font-weight:normal;
-    position:absolute;
-    pointer-events:none;
-    left:15px;
-    top:4px;
-    transition:0.2s ease all;
-    -moz-transition:0.2s ease all;
-    -webkit-transition:0.2s ease all;
+    font-size: 10px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 15px;
+    top: 4px;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
   }
 }
 
